--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -21,19 +21,19 @@
       <h1>Archiv</h1>
       <h2 class="uppercase">Exercicer</h2>
       <hr />
-      <h2>Chimie</h2>
+      <h2>Chemie</h2>
       <ol>
         <li>
           <p><u>Organische Chemie</u></p>
           <ul>
             <li>
-              <a href="Chimie/html/alkane.html">Alkane</a>
+              <a href="Chimie/pdf/Alkane.pdf">Alkane</a>
             </li>
             <li>
-              <a href="Chimie/html/alkene.html">Alkene</a>
+              <a href="Chimie/pdf/Alkene.pdf">Alkene</a>
             </li>
             <li>
-              <a href="Chimie/html/alkanole.html">Alkanole</a>
+              <a href="Chimie/pdf/Alkohole.pdf">Alkanole</a>
             </li>
           </ul>
         </li>
@@ -44,20 +44,22 @@
           <p><u>RLC, RL, RC Schaltungen</u></p>
           <ul>
             <li>
-              <a href="Elektrotechnik/html/rlcSchaltungen.html"
+              <a href="Elektrotechnik/pdf/RLC - Parallelschaltungen.pdf"
                 >RLC Reihenschaltung</a
               >
             </li>
           </ul>
         </li>
       </ol>
-      <h2>Mathé</h2>
+      <h2>Mathématiques</h2>
       <ol>
         <li>
           <p><u>Géométrie dans l'espace</u></p>
           <ul>
             <li>
-              <a href="Mathe/html/produitScalaire.html">Produit Scalaire</a>
+              <a href="Mathe/pdf/Produit Vectorielle.pdf"
+                >Produit Vectorielle</a
+              >
             </li>
           </ul>
         </li>
@@ -65,7 +67,7 @@
           <p><u>Intégration</u></p>
           <ul>
             <li>
-              <a href="Mathe/html/integration.html">Intégration</a>
+              <a href="Mathe/pdf/Integration.pdf">Intégration</a>
             </li>
           </ul>
         </li>
@@ -73,12 +75,12 @@
           <p><u>Logarithme Népérien</u></p>
           <ul>
             <li>
-              <a href="Mathe/html/logarithmeNeperien.html">
+              <a href="Mathe/pdf/Logarithme Neperien 1.pdf">
                 Logarithme Népérien 1</a
               >
             </li>
             <li>
-              <a href="Mathe/html/logarithmeNeperien2.html">
+              <a href="Mathe/pdf/Logarithme Neperien 2.pdf">
                 Logarithme Népérien 2</a
               >
             </li>
@@ -91,7 +93,7 @@
           <p><u>Arbeit und Leistung</u></p>
           <ul>
             <li>
-              <a href="Mechanik/html/ArbeitUndLeistung.html"
+              <a href="Mechanik/pdf/Arbeit Und Leistung.pdf"
                 >Arbeit und Leistung</a
               >
             </li>
@@ -101,7 +103,7 @@
           <p><u>Festigkeitslehre</u></p>
           <ul>
             <li>
-              <a href="Mechanik/html/festigkeitslehre.html">Festigkeitslehre</a>
+              <a href="Mechanik/pdf/Festigkeitslehre.pdf">Festigkeitslehre</a>
             </li>
           </ul>
         </li>
@@ -112,10 +114,22 @@
           <p><u>Wellenoptik</u></p>
           <ul>
             <li>
-              <a href="Physik/html/wellenoptik.html">Wellenoptik</a>
+              <a href="Physik/pdf/Wellenoptik/Wellenoptik.pdf">Wellenoptik</a>
             </li>
             <li>
-              <a href="Physik/html/duenneSchichten.html">Dünne Schichten</a>
+              <a href="Physik/pdf/Wellenoptik/Duenne Schichten.pdf"
+                >Dünne Schichten</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Radioaktivität</u></p>
+          <ul>
+            <li>
+              <a href="Physik/pdf/Radioaktivitaet/Radioaktivitaet.pdf"
+                >Radioaktivität</a
+              >
             </li>
           </ul>
         </li>
@@ -123,7 +137,40 @@
           <p><u>Relativitaet</u></p>
           <ul>
             <li>
-              <a href="Physik/html/realtivitaet.html">Relativität</a>
+              <a href="Physik/pdf/Relativitaet/Relativitaet.pdf">Relativität</a>
+            </li>
+          </ul>
+        </li>
+      </ol>
+
+      <h2>Programmation en Java</h2>
+      <ol>
+        <li>
+          <p><u>La classe Timer</u></p>
+          <ul>
+            <li>
+              <a
+                href="Programmation en Java/pdf/Classe Timer/Chronometre Simple.pdf"
+                >Chronomètre Simple</a
+              >
+            </li>
+            <li>
+              <a href="Programmation en Java/pdf/Moving Ball.pdf"
+                >Moving Ball</a
+              >
+            </li>
+            <li>
+              <a href="Programmation en Java/pdf/Moving Balls.pdf"
+                >Moving Balls</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Héritage</u></p>
+          <ul>
+            <li>
+              <a href="Programmation en Java/pdf/Heritage/emojis.pdf">Emojis</a>
             </li>
           </ul>
         </li>
@@ -134,7 +181,7 @@
       <h2>Divers - PDF</h2>
       <ol>
         <li>
-          <a href="Dokumenter/html/naturkonstanten.html"
+          <a href="Dokumenter/pdf/Divers/Naturkonstanten.pdf"
             >Naturkonstanten Tabelle</a
           >
         </li>
