--- a/Physik/quantenmechanik.html
+++ b/Physik/quantenmechanik.html
@@ -23,7 +23,49 @@
     <div class="main-wrapper">
       <p id="printWatermark"></p>
       <h1>Quantenmechanik</h1>
-      <h2>h2Header</h2>
+      <h2>Etymologie</h2>
+      <p>
+        Das Word Quantenmechanik setzt sich zusammen aus dem Wort Quantität und
+        Mechanik. <br />
+        In der Quantenmechanik wird, anders wie in dem Alltag, die Energie nicht
+        kontinuierlich sondern in Portionen abgegeben. Diese werden
+        Energiequanten oder Energieportionen genannt.
+      </p>
+      <h2>Photoeffekt, lichtelektrischer Effekt, photoelektrischer Effekt</h2>
+      <p>
+        Der Photoeffekt, behandelt das Freisetzen von Elektronen aus einem
+        Metall, wenn diese von elektromagnetischer Strahlung getroffen wird.
+      </p>
+      <h3>Versuch</h3>
+      <p>
+        Wir bestrahlen eine Metallplatte mit elektromagnetischer Strahlung Die
+        elektromagnetische Strahlung wird bei dem Versuch von einer
+        Quechsilberdampflampe geliefert. Dieses Licht besteht aus: sichtbarem
+        Licht sowie ultraviolettem Licht. Man beobachtet, dass bei höhrer
+        Frequenz des Lichtes, also niederer Wellenlänge, Elektronen freigesetzt
+        werden. Es gibt also eine Grenzfrequenz $f_G$ oder eine Grenzwellenlänge
+        $\lambda_G$.
+      </p>
+      <h3>Schlussfolgerung</h3>
+      <p>
+        Der Photoeffekt ist also abhänging von der Wellenlänge der
+        elektromagnetischen Strahlung, sowie Material. Der Photoeffekt ist
+        jedoch nicht von der Lichtintensität. Die Elektronen werden also
+        abgesto&beta;en in einem Sto&beta;vorgang.
+      </p>
+      <h2>Photon, Lichtquant</h2>
+      <p>
+        Um den Photoeffekt zu erklären wurde das <i>Photon</i> postuliert.
+        Dieses Teilchen erklärt nun den Sto&beta;vorgang das die Elektronen
+        absto&beta;t. Es kann als Art: <q>Energiebündel</q>, gesehen werden. Die
+        Energie des Photons beträgt also:
+      </p>
+      $$ E = h \cdot f$$
+      <p>mit</p>
+      $$h,\ Planck-Konstante$$ $$ h,\ 6,626 \cdot 10^{-34} Js $$
+      <p>Siehe <a href="../Divers/naturkonstanten.html">Naturkonstanten</a></p>
+      .
+      <p></p>
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
