--- a/changeLog.html
+++ b/changeLog.html
@@ -115,6 +115,9 @@
             <time>.3.2023</time>
             <ul>
               <li class="changeLogText">
+                Nei Kategorie vun Exercicer : Java Programmatioun
+              </li>
+              <li class="changeLogText">
                 Neit Kapitel an der Physik: Quantenmechanik
               </li>
               <li class="changeLogText">
