--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -27,13 +27,13 @@
           <p><u>Organische Chemie</u></p>
           <ul>
             <li>
-              <a href="Chimie/pdf/Alkane.pdf">Alkane</a>
+              <a href="Chimie/pdf/Organische Chemie/Alkane.pdf">Alkane</a>
             </li>
             <li>
-              <a href="Chimie/pdf/Alkene.pdf">Alkene</a>
+              <a href="Chimie/pdf/Organische Chemie/Alkene.pdf">Alkene</a>
             </li>
             <li>
-              <a href="Chimie/pdf/Alkohole.pdf">Alkanole</a>
+              <a href="Chimie/pdf/Organische Chemie/Alkohole.pdf">Alkanole</a>
             </li>
           </ul>
         </li>
@@ -44,7 +44,8 @@
           <p><u>RLC, RL, RC Schaltungen</u></p>
           <ul>
             <li>
-              <a href="Elektrotechnik/pdf/RLC - Parallelschaltungen.pdf"
+              <a
+                href="Elektrotechnik/pdf/RLC Reihenschaltung/RLC - Reihenschaltungen.pdf"
                 >RLC Reihenschaltung</a
               >
             </li>
@@ -57,7 +58,7 @@
           <p><u>Géométrie dans l'espace</u></p>
           <ul>
             <li>
-              <a href="Mathe/pdf/Produit Vectorielle.pdf"
+              <a href="Mathe/pdf/Geometrie/Produit Vectorielle.pdf"
                 >Produit Vectorielle</a
               >
             </li>
@@ -67,7 +68,7 @@
           <p><u>Intégration</u></p>
           <ul>
             <li>
-              <a href="Mathe/pdf/Integration.pdf">Intégration</a>
+              <a href="Mathe/pdf/Integration/Integration.pdf">Intégration</a>
             </li>
           </ul>
         </li>
@@ -75,12 +76,12 @@
           <p><u>Logarithme Népérien</u></p>
           <ul>
             <li>
-              <a href="Mathe/pdf/Logarithme Neperien 1.pdf">
+              <a href="Mathe/pdf/Logarithme Neperien/Logarithme Neperien 1.pdf">
                 Logarithme Népérien 1</a
               >
             </li>
             <li>
-              <a href="Mathe/pdf/Logarithme Neperien 2.pdf">
+              <a href="Mathe/pdf/Logarithme Neperien/Logarithme Neperien 2.pdf">
                 Logarithme Népérien 2</a
               >
             </li>
@@ -93,7 +94,7 @@
           <p><u>Arbeit und Leistung</u></p>
           <ul>
             <li>
-              <a href="Mechanik/pdf/Arbeit Und Leistung.pdf"
+              <a href="Mechanik/pdf/Arbeit Und Leistung/Arbeit Und Leistung.pdf"
                 >Arbeit und Leistung</a
               >
             </li>
@@ -103,7 +104,9 @@
           <p><u>Festigkeitslehre</u></p>
           <ul>
             <li>
-              <a href="Mechanik/pdf/Festigkeitslehre.pdf">Festigkeitslehre</a>
+              <a href="Mechanik/pdf/Festigkeitslehre/Festigkeitslehre.pdf"
+                >Festigkeitslehre</a
+              >
             </li>
           </ul>
         </li>
@@ -149,18 +152,17 @@
           <p><u>La classe Timer</u></p>
           <ul>
             <li>
-              <a
-                href="Programmation en Java/pdf/Classe Timer/Chronometre Simple.pdf"
-                >Chronomètre Simple</a
+              <a href="Programmation en Java/pdf/Classe Timer/Chronometre.pdf"
+                >Chronomètre</a
               >
             </li>
             <li>
-              <a href="Programmation en Java/pdf/Moving Ball.pdf"
+              <a href="Programmation en Java/pdf/Classe Timer/Moving Ball.pdf"
                 >Moving Ball</a
               >
             </li>
             <li>
-              <a href="Programmation en Java/pdf/Moving Balls.pdf"
+              <a href="Programmation en Java/pdf/Classe Timer/Moving Balls.pdf"
                 >Moving Balls</a
               >
             </li>
@@ -170,7 +172,7 @@
           <p><u>Héritage</u></p>
           <ul>
             <li>
-              <a href="Programmation en Java/pdf/Heritage/emojis.pdf">Emojis</a>
+              <a href="Programmation en Java/pdf/Heritage/Emojis.pdf">Emojis</a>
             </li>
           </ul>
         </li>
