--- a/Mathe/fonctionExponentielle.html
+++ b/Mathe/fonctionExponentielle.html
@@ -90,7 +90,7 @@
         On sait que: \( \forall a,\ b \in \mathbb{R} \) : \( \exp \left(
         a+b\right) =\exp \left( a\right) \cdot \exp \left( b\right)\ (1) \)
         <br />
-        1) Pour \( b = -a \), on obtient :
+        1 Pour \( b = -a \), on obtient :
       </p>
       $$\exp \left[ a+\left( -a\right) \right] =\exp \left( a\right) \cdot \exp
       \left( -a\right) $$ $$\Leftrightarrow \exp \left( 0\right) =\exp \left(
