--- a/Mathe/ln.html
+++ b/Mathe/ln.html
@@ -80,7 +80,7 @@
         </li>
       </ol>
       <h3>Théorème</h3>
-      <p>$\forall a \in \mathbb{R^*}$ et $\forall b \in \mathbb{R}$</p>
+      <p>$\forall a \in \mathbb{R^*_+}$ et $\forall b \in \mathbb{R}$</p>
       $$ \ln(a) = b \Leftrightarrow a = e^b$$
       <h3>Démonstration</h3>
       <p>
@@ -103,7 +103,7 @@
       <p>et</p>
       $$ \ln(a) < \ln(b) \Leftrightarrow a < b $$
       <h3>Théorème</h3>
-      <p>$\forall a,b \in \mathbb{R^*}$</p>
+      <p>$\forall a,b \in \mathbb{R^*_+}$</p>
       $$ \ln(ab) = \ln(a) + \ln(b)$$
       <h3>Démonstration</h3>
       <p>$\forall a,b \in \mathbb{R^*_+}$</p>
@@ -116,7 +116,7 @@
       ab = e^{\ln(a)} \cdot e^{\ln(b)} $$ $$ \Leftrightarrow ab = e^{\ln(a)}
       \cdot e^{\ln(b)} $$$$ \Leftrightarrow ab = a \cdot b $$
       <h3>Théorème</h3>
-      <p>$\forall a,b \in \mathbb{R^*}$</p>
+      <p>$\forall a,b \in \mathbb{R^*_+}$</p>
       $$ \ln(\frac{a}{b}) = \ln(a) - \ln(b)$$ $$ \ln(\frac{1}{b}) = - \ln(b)$$
       <h3>Démonstration</h3>
       <p>On sait que:</p>
@@ -177,7 +177,7 @@
         </li>
       </ul>
       <h3>Théorème</h3>
-      <p>$ \forall a \in \mathbb{R^*}$ et $\forall p \in \mathbb{Z}$</p>
+      <p>$ \forall a \in \mathbb{R^*_+}$ et $\forall p \in \mathbb{Z}$</p>
       $$ \ln(a^p) = p \cdot \ln(a)$$
       <h3>Démonstration</h3>
       <p>
@@ -326,7 +326,7 @@
           <p>$\lim_{x \rightarrow + \infty} \frac{\ln(x)}{x^n} = 0$</p>
         </li>
         <li>
-          <p>$\lim_{x \rightarrow + \infty} \frac{x^n{\ln(x)}} = + \infty$</p>
+          <p>$\lim_{x \rightarrow + \infty} x^n{\ln(x)} = + \infty$</p>
         </li>
         <li>
           <p>$\lim_{x \rightarrow 0^+} x^n \ln(x) = 0$</p>
