--- a/Physik/quantenmechanik.html
+++ b/Physik/quantenmechanik.html
@@ -38,25 +38,35 @@
       </p>
       <h3>Versuch</h3>
       <p>
-        Wir bestrahlen eine Metallplatte mit elektromagnetischer Strahlung Die
-        elektromagnetische Strahlung wird bei dem Versuch von einer
-        Quechsilberdampflampe geliefert. Dieses Licht besteht aus: sichtbarem
-        Licht sowie ultraviolettem Licht. Man beobachtet, dass bei höhrer
-        Frequenz des Lichtes, also niederer Wellenlänge, Elektronen freigesetzt
-        werden. Es gibt also eine Grenzfrequenz $f_G$ oder eine Grenzwellenlänge
-        $\lambda_G$.
+        Eine negativ geladene Metallplatte wird mit elektromagnetischer
+        Strahlung bestrahlt. Die elektromagnetische Strahlung wird bei dem
+        Versuch von einer Quecksilberdampflampe geliefert. Dieses Licht besteht
+        aus: sichtbarem Licht sowie ultraviolettem Licht. Dabei entlädt sich die
+        Platte. <br />
+        Bei dem Versuch ist die Lichtintensität irrelevant. Bei höherer Frequenz
+        zum Beispiel Licht mit ultraviolettem Licht lösen sich dei Elektronen ab
+        und sie entlädt sich.
       </p>
+
       <h3>Schlussfolgerung</h3>
       <p>
-        Der Photoeffekt ist also abhänging von der Wellenlänge der
-        elektromagnetischen Strahlung, sowie Material. Der Photoeffekt ist
-        jedoch nicht von der Lichtintensität. Die Elektronen werden also
-        abgesto&beta;en in einem Sto&beta;vorgang.
+        Der Photoeffekt ist also abhänging von der Wellenlänge sowie der
+        Frequenz der elektromagnetischen Strahlung, sowie Material. Und es gibt
+        eine Grenzfrequenz $f_G$ und auch eine Grenzwellenlänge $\lambda_G. Der
+        Photoeffekt ist jedoch nicht von der Lichtintensität abhänging. Die
+        Elektronen werden also abgesto&beta;en in einem Sto&beta;vorgang.
       </p>
+      <h3>Gültigkeitsbedingungen</h3>
+      <p>Sodass der Photoeffekt eintritt müssen:</p>
+      $$ f \geqslant f_G $$
+      <p>und</p>
+      $$ \lambda \leqslant \lambda_G $$
+      <p>Daher gilt:</p>
+      $$ \lambda_G = \frac{c}{f_G} $$
       <h2>Photon, Lichtquant</h2>
       <p>
         Um den Photoeffekt zu erklären wurde das <i>Photon</i> postuliert.
-        Dieses Teilchen erklärt nun den Sto&beta;vorgang das die Elektronen
+        Dieses Teilchen erklärt nun den Sto&beta;vorgang, das die Elektronen
         absto&beta;t. Es kann als Art: <q>Energiebündel</q>, gesehen werden. Die
         Energie des Photons beträgt also:
       </p>
