--- a/Technologie/festigkeitslehre.html
+++ b/Technologie/festigkeitslehre.html
@@ -154,9 +154,71 @@
       $$ Dehnung = \frac{Längenzunahme}{Me&beta;strecke} $$ $$\varepsilon =
       \frac{\Delta l}{l_0}$$
       <h3>Einheit</h3>
-      $$ [l] = mm^2$$ $$ \varepsilon,\ hat\ keine\ Einheit$$
+      $$ [l] = mm^2$$ $$ [\varepsilon] \rightarrow keine\ Einheit$$
+
       <h3>Bemerkung</h3>
       <p>Die Dehnung $\varepsilon$ wird oft in % angegeben.</p>
+      <p>
+        Durch den Zugversuch wird der Stab dünner. Wir erhalten also folgende
+        grö&beta;en:
+      </p>
+      $$ d_0,\ Stabdurchmesser\ ohne\ Belastung $$ $$ d,\ Stabdurchmesser\
+      unter\ Belastung $$ $$ \Delta d,\ Änderung\ des\ Stabdurchmesser $$
+      <h3>Formel</h3>
+      $$ \varepsilon_q = \frac{\Delta d}{d_0} $$
+      <h3>Bemerkung</h3>
+      <p>Beide Grö&beta;en werden normalerweise in $mm$ angegeben.</p>
+      $$ [\varepsilon_q] \rightarrow keine\ Einheit$$
+      <p>
+        Den Zusammenhang zwischen der Zugspannung $\sigma_z$ und der Dehnung
+        $\varepsilon$ kann man in einem Diagramm darstellen : dem
+        <i>Spannungs Dehnungs Diagramm</i>.
+      </p>
+      <img
+        src="img/Festigkeitslehre/spannungs dehungs diagramm.png"
+        alt="spannungs dehungs diagramm"
+        class="zeichnungen"
+      />
+      <h3>Wichtige Grö&beta;en</h3>
+      <ul>
+        <li>
+          <p><u>Proportionalitätsgrenze</u> $\sigma_P$</p>
+          <p>
+            Bis zu dieser Grenze verlauft die Spannungs-Dehnungskurve linear.
+            Die Spannung ist direkt proportional zur Dehnung.
+          </p>
+        </li>
+        <li>
+          <p><u>Elastizitatsgrenze</u> $\sigma_E$</p>
+          <p>
+            Wird der Probestab nicht über die Spannung $\sigma_E$ hinaus
+            beansprucht, so verhält sich der Stab elastisch, das hei&beta;t nach
+            Abklingen der Belastung ist keine bleibende Verformung zu erkennen.
+          </p>
+        </li>
+        <li>
+          <p><u>Streckgrenze</u> $R_e$</p>
+          <p>
+            Ist die Streckgrenze erreicht, so beginnt der Werkstoff zu
+            flie&beta;en, das hei&beta;t die Spannung fällt leicht ab und die
+            Dehnung nimmt bei praktisch konstanter Spannung stark zu. Diese
+            Streckgrenze ist nur bei weichen Stahlen ausgepragt, bei andern
+            Werkstoffen ist sic nicht vorhanden.
+          </p>
+        </li>
+        <li>
+          <p><u>Zugfestigkeit</u> $R_m$</p>
+          <p>
+            Nach dem Flie&beta;en erholt sich der Werkstoff wieder und die
+            Spannung steigt mit zunehmender Dehnung bis zu ihrem Höchstwert
+            $R_m$. Danach nimmt die Spannung bei zunehmender Dehnung ab, bis der
+            Bruch des Probestabes erfolgt. In diesem Bereich tritt eine starke
+            Einschnürung auf.
+          </p>
+        </li>
+      </ul>
+      <h2>Gesetz von Hooke</h2>
+      $$ \frac{\sigma}{\varepsilon} = konstant = \tan(\alpha) $$
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
