--- a/changeLog.html
+++ b/changeLog.html
@@ -111,17 +111,34 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
-            <h3>Update 38</h3>
+            <h3>Update 39</h3>
             <time>.3.2023</time>
             <ul>
               <li class="changeLogText">
-                Nei Kategorie vun Exercicer : Java Programmatioun
+                Ergänzungen am Kapitel: Festigkeitslehre
+              </li>
+              <li class="changeLogText">
+                Ännerungen an Ergänzungen am Kapitel: Quantenmechanik
+              </li>
+              <li class="changeLogText">
+                Feeler am Kapitel : Fonction Logarithme Népérien, goufe
+                verbessert
+              </li>
+            </ul>
+            <h3>Update 38</h3>
+            <time>18.3.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Nei Kategorie vun Exercicer : Programmation en Java
               </li>
               <li class="changeLogText">
                 Neit Kapitel an der Physik: Quantenmechanik
               </li>
               <li class="changeLogText">
                 Tabellen ginn elo op grousse Bildschirmer proper ugewiesen
+              </li>
+              <li class="changeLogText">
+                Dateien am Archiv kënnen elo op mobille Apparater op gemet ginn
               </li>
               <li class="changeLogText">Feeler goufe verbessert</li>
               <li class="changeLogText">Nei Spréch!</li>
