--- a/Informatik/htmlBasics.html
+++ b/Informatik/htmlBasics.html
@@ -134,6 +134,7 @@
         For more information visit the
         <a
           target="_blank"
+          rel="noopener"
           href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element"
           >Mozilla developer page</a
         >.
