--- a/Informatik/index.html
+++ b/Informatik/index.html
@@ -20,6 +20,11 @@
         <li>
           <a href="javaBasics.html" class="indexLink">Java Basics</a>
         </li>
+        <li>
+          <a href="javaPromblemesTypes.html" class="indexLink"
+            >Java problèmes types</a
+          >
+        </li>
 
         <li>
           <a href="javaArrayLists.html" class="indexLink">Java Array Lists</a>
