--- a/Physik/strahlenoptik.html
+++ b/Physik/strahlenoptik.html
@@ -564,7 +564,7 @@
         Bei kleinen Winkeln erhalten wir durch Kleinwinkelnäherung (wenn \(
         \omega \) in \( rad \) ):
       </p>
-      $$ \omega = \frac{B}{G} = \frac{b}{g} $$
+      $$ \omega = \frac{B}{b} = \frac{G}{g} $$
       <h3>Einheit</h3>
       <p>
         Der Sehwinkel kann in \( rad \) oder in Sekunden \( s \) und Minuten \(
