--- a/Technologie/index.html
+++ b/Technologie/index.html
@@ -31,6 +31,15 @@
           <a href="festigkeitslehre.html" class="indexLink">Festigkeitslehre</a>
         </li>
       </ol>
+      <h2>Energiewandler</h2>
+      <ol>
+        <li>
+          <a href="stirlingmotor.html" class="indexLink">Stirling Motor</a>
+        </li>
+        <li>
+          <a href="waermepumpe.html" class="indexLink">Wärmepumpe</a>
+        </li>
+      </ol>
     </div>
   </body>
 </html>
