--- a/changeLog.html
+++ b/changeLog.html
@@ -115,14 +115,23 @@
             <time>.3.2023</time>
             <ul>
               <li class="changeLogText">
+                Neit Kapitel an der Informatik: Java Problèmes Types
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Technologie: Wärmepumpe
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Technologie: Stirling Motor
+              </li>
+              <li class="changeLogText">
                 Ergänzungen am Kapitel: Festigkeitslehre
               </li>
               <li class="changeLogText">
                 Ännerungen an Ergänzungen am Kapitel: Quantenmechanik
               </li>
               <li class="changeLogText">
-                Feeler am Kapitel : Fonction Logarithme Népérien, goufe
-                verbessert
+                Feeler am Kapitel : Fonction Logarithme Népérien a
+                Strahlenoptik, goufe verbessert
               </li>
             </ul>
             <h3>Update 38</h3>
