--- a/Chemie/index.html
+++ b/Chemie/index.html
@@ -57,6 +57,9 @@
         <li>
           <a href="alkene.html" class="indexLink">Alkene</a>
         </li>
+        <li>
+          <a href="alkohole.html" class="indexLink">Alkohole</a>
+        </li>
       </ol>
 
       <h3>Bemierkung</h3>
