--- a/changeLog.html
+++ b/changeLog.html
@@ -115,6 +115,9 @@
             <time>.3.2023</time>
             <ul>
               <li class="changeLogText">
+                Neit Kapitel an der Chemie: Alkohole
+              </li>
+              <li class="changeLogText">
                 Neit Kapitel an der Informatik: Java Problèmes Types
               </li>
               <li class="changeLogText">
@@ -133,6 +136,7 @@
                 Feeler am Kapitel : Fonction Logarithme Népérien a
                 Strahlenoptik, goufe verbessert
               </li>
+              <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 38</h3>
             <time>18.3.2023</time>
