--- a/Informatik/index.html
+++ b/Informatik/index.html
@@ -16,7 +16,8 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Informatik</h1>
-      <ol class="orederedListIndex">
+      <h2>Java</h2>
+      <ol>
         <li>
           <a href="javaBasics.html" class="indexLink">Java Basics</a>
         </li>
@@ -29,12 +30,21 @@
         <li>
           <a href="javaArrayLists.html" class="indexLink">Java Array Lists</a>
         </li>
+      </ol>
+      <h2>HTML</h2>
+      <ol>
         <li>
           <a href="htmlBasics.html" class="indexLink">HTML Basics</a>
         </li>
+      </ol>
+      <h2>CSS</h2>
+      <ol>
         <li>
           <a href="cssBasics.html" class="indexLink">CSS Basics</a>
         </li>
+      </ol>
+      <h2>LaTeX</h2>
+      <ol>
         <li>
           <a href="latexBasics.html" class="indexLink">LATEX Basics</a>
         </li>
